--- a/package.json
+++ b/package.json
@@ -8,24 +8,17 @@
     "npm": "^5.6.0"
   },
   "scripts": {
+    "build": "npm run clean && npm run css-build",
     "start": "node server.js",
+    "start:dev": "npm run build && DEBUG=gov-starter-server* nodemon server.js",
     "test": "mocha",
-    "test-with-coverage": "nyc --reporter=text --check-coverage --lines 85 mocha",
-    "test-with-coverage-ci": "nyc --reporter=html --check-coverage --lines 85 mocha --reporter mocha-junit-reporter",
-    "plant-beanstalk": "node bin/plant-beanstalk.js",
     "lint": "eslint .",
     "record-build-info": "node ./bin/record-build-info",
-    "wait-for-deploy": "node ./bin/wait-for-deploy",
-    "build": "npm run clean && npm run css-build",
-    "dev": "npm run build && npm run lint && npm run test && npm run start-watchmode",
     "css-build": "./bin/build-css",
     "clean": "rm -rf public/* .port.tmp *.log build/* uploads/* test-results.xml",
-    "start-watchmode": "nodemon --watch server server.js",
-    "knex": "knex",
-    "knex-migrate": "knex-migrate",
-    "migrate": "knex migrate:latest --env standard",
-    "seed": "knex seed:run --env standard",
-    "demo": "knex seed:run --env demo"
+    "db:knex": "knex",
+    "db:knex-migrate": "knex-migrate",
+    "db:seed": "knex seed:run --env standard"
   },
   "husky": {
     "hooks": {
@@ -43,6 +36,17 @@
     "ignore": [
       "package.json"
     ]
+  },
+  "nodemonConfig": {
+    "ignore": [
+      ".circleci/*",
+      "migrations/*",
+      "seeds/*",
+      "node_modules/*",
+      "integration-tests/*"
+    ],
+    "delay": "2500",
+    "ext": "js,json,html,pug"
   },
   "repository": {
     "type": "git",
@@ -123,7 +127,6 @@
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.18.0",
     "nock": "^9.6.1",
-    "nyc": "^14.1.1",
     "pdf-parse": "^1.1.1",
     "prettier": "1.16.4",
     "proxyquire": "^2.1.0",
