--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start:dev": "npm run build && DEBUG=gov-starter-server* nodemon server.js",
     "test": "mocha",
     "lint": "eslint .",
+    "typecheck": "tsc",
     "record-build-info": "node ./bin/record-build-info",
     "css-build": "./bin/build-css",
     "clean": "rm -rf public/* .port.tmp *.log build/* uploads/* test-results.xml",
@@ -22,7 +23,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "NODE_ENV=dev && lint-staged"
+      "pre-commit": "NODE_ENV=dev && lint-staged && tsc"
     }
   },
   "lint-staged": {
@@ -113,6 +114,7 @@
     "winston-azure-application-insights": "^2.0.0"
   },
   "devDependencies": {
+    "@types/node": "^12.12.14",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "dirty-chai": "^2.0.1",
@@ -131,6 +133,7 @@
     "proxyquire": "^2.1.3",
     "sinon": "^6.3.5",
     "sinon-chai": "^3.3.0",
-    "supertest": "^3.4.2"
+    "supertest": "^3.4.2",
+    "typescript": "^3.7.2"
   }
 }
