--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -30,3 +30,4 @@ env:
   RO_SERVICE_TYPE: "DELIUS"
   DELIUS_API_URL: "https://community-api-secure.test.delius.probation.hmpps.dsd.io"
   DELIUS_API_PREFIX: "/secure"
+  PROBATION_TEAMS_API_URL: "https://probation-teams-dev.prison.service.justice.gov.uk"
