--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -28,6 +28,7 @@ env:
   NOTIFY_ACTIVE_TEMPLATES: "CA_RETURN,CA_DECISION,RO_NEW,DM_NEW,DM_TO_CA_RETURN"
   DELIUS_API_URL: "https://community-api-secure.pre-prod.delius.probation.hmpps.dsd.io"
   DELIUS_API_PREFIX: "/secure"
+  PROBATION_TEAMS_API_URL: "https://probation-teams-preprod.prison.service.justice.gov.uk"
 
 whitelist:
   office: "217.33.148.210/32"
