--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,6 +133,7 @@ jobs:
       NOMIS_AUTH_URL: https://nomis-oauth2-server.herokuapp.com/auth
       PDF_SERVICE_HOST: https://licences-demo-mocks.herokuapp.com/pdfgenerator
       DELIUS_API_URL: https://licences-demo-mocks.herokuapp.com/communityapi
+      PROBATION_TEAMS_API_URL: http://licences-nomis-mocks:9090/probationteams
     steps:
       - checkout
       - attach_workspace:
