--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "checkJs": true,
     "resolveJsonModule": true
   },
-  "exclude": ["node_modules", "test/**/*.js", "assets/**/*.js"],
+  "exclude": ["node_modules", "test/**/*.js", "assets/**/*.js", "licences-specs"],
   "include": ["**/*.js"]
 }
