DCS-264-feature flag created and tests updated
The feature flag will enable the user to either follow the happy path where the CA can complete the eligibility section and then enter the Curfew Address or alternatively, be prevented from progressing past eligibilty checks if the ROs LDU is not active.
The default for the flag is to let the CA progress to the Curfew Address section.

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -31,3 +31,4 @@ env:
   DELIUS_API_URL: "https://community-api-secure.test.delius.probation.hmpps.dsd.io"
   DELIUS_API_PREFIX: "/secure"
   PROBATION_TEAMS_API_URL: "https://probation-teams-dev.prison.service.justice.gov.uk"
+  CONTINUE_CA_TO_RO_FEATURE_FLAG: "yes"
