--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - PDF_SERVICE_HOST=http://hdc-pdfgenerator:8080
       - GLOBAL_SEARCH_URL=http://localhost:3002/global-search
       - ENABLE_TEST_UTILS=true
+      - CONTINUE_CA_TO_RO_FEATURE_FLAG=yes
 
   probation-teams:
     image: mojdigitalstudio/probation-teams:latest
