--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "knex-migrate": "^1.7.4",
     "moment": "^2.24.0",
     "moment-business-days": "^1.1.3",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "node-sass-middleware": "^0.11.0",
     "node-schedule": "^1.3.2",
     "nodemon": "^1.19.4",
@@ -140,6 +140,7 @@
     "winston-azure-application-insights": "^2.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.9.0",
     "@types/node": "^12.12.14",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
