--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,13 @@
 {
   "extends": ["airbnb-base", "plugin:prettier/recommended"],
   "rules": {
+    "no-unused-vars": [
+      1,
+      {
+        "argsIgnorePattern": "res|next|^err|_",
+        "ignoreRestSiblings": true
+      }
+    ],
     "prettier/prettier": ["error"],
     "no-use-before-define": "off",
     "prefer-destructuring": "warn",
