--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -29,7 +29,7 @@ env:
   DELIUS_API_URL: "https://community-api-secure.probation.service.justice.gov.uk"
   DELIUS_API_PREFIX: "/secure"
   PROBATION_TEAMS_API_URL: "https://probation-teams.prison.service.justice.gov.uk"
-  CJA2003_SZA: "no"
+  CJA2003_SZA: "yes"
 
 whitelist:
   office: "217.33.148.210/32"
