--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,9 @@ commands:
     parameters:
       env:
         type: string
+      slack_notification:
+        type: boolean
+        default: false
     steps:
       - setup
       - checkout:
@@ -35,15 +38,25 @@ commands:
       - deploy:
           name: Deploy to << parameters.env >>
           command: |
+            APP=licences
             APP_VERSION=$(egrep buildNumber build-info.json  | awk -F"\"" '{print $4}')
-            sed -i "s/appVersion: \".*\"/appVersion: \"${APP_VERSION}\"/g" ~/git/helm_deploy/licences/Chart.yaml
+            echo "export APP_VERSION=$APP_VERSION" >> $BASH_ENV
+            sed -i "s/appVersion: \".*\"/appVersion: \"${APP_VERSION}\"/g" ~/git/helm_deploy/${APP}/Chart.yaml
             aws secretsmanager get-secret-value --secret-id ${AWS_SECRET_NAME} | jq -r .SecretString | \
-            helm upgrade licences ~/git/helm_deploy/licences/. \
+            helm upgrade ${APP} ~/git/helm_deploy/${APP}/. \
               --install --wait --reset-values --timeout 5m --history-max 10 \
               --namespace=${KUBE_ENV_NAMESPACE} \
               --values ~/git/helm_deploy/values-<< parameters.env >>.yaml \
               --values - \
               --set image.tag="${APP_VERSION}"
+      - when:
+          condition: <<parameters.slack_notification>>
+          steps:
+            - slack/notify:
+                message: "*${APP}* version:*${APP_VERSION}* deployed to << parameters.env >>"
+                include_project_field: false
+                include_job_number_field: false
+
 executors:
   deployer:
     docker:
@@ -58,6 +71,7 @@ orbs:
   aws-cli: circleci/aws-cli@0.1.18
   kubernetes: circleci/kubernetes@0.10.1
   helm: circleci/helm@0.2.3
+  slack: circleci/slack@3.4.2
 
 jobs:
   validate:
@@ -88,10 +102,6 @@ jobs:
       - run:
           command: |
             npm run build
-            DATE=$(date '+%Y-%m-%d')
-            export BUILD_NUMBER=${DATE}.${CIRCLE_BUILD_NUM}
-            export GIT_REF="$CIRCLE_SHA1"
-            npm run record-build-info
       - persist_to_workspace:
           root: .
           paths:
@@ -223,6 +233,7 @@ jobs:
     steps:
       - deploy_to_env:
           env: "prod"
+          slack_notification: true
 
 workflows:
   version: 2
