--- a/package.json
+++ b/package.json
@@ -134,8 +134,7 @@
     "swagger-ui-express": "^4.1.4",
     "util": "^0.12.2",
     "uuid": "^7.0.3",
-    "winston": "^3.2.1",
-    "winston-azure-application-insights": "^2.0.0"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/jest": "^25.2.1",
