--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "clean": "rm -rf public/* .port.tmp *.log build/* uploads/* test-results.xml",
     "db:knex": "knex",
     "db:knex-migrate": "knex-migrate",
-    "db:seed": "knex seed:run --env standard"
+    "db:seed": "knex seed:run --env standard",
+    "security_audit": "npx audit-ci --config audit-ci.json"
   },
   "husky": {
     "hooks": {
@@ -114,10 +115,7 @@
     "moment": "^2.24.0",
     "moment-business-days": "^1.1.3",
     "nocache": "^2.1.0",
-    "node-sass": "^4.13.1",
-    "node-sass-middleware": "^0.11.0",
     "node-schedule": "^1.3.2",
-    "nodemon": "^2.0.2",
     "notifications-node-client": "^4.7.2",
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
@@ -150,8 +148,11 @@
     "jest-junit": "^10.0.0",
     "lint-staged": "^10.1.1",
     "nock": "^12.0.3",
+    "node-sass": "^4.13.1",
+    "nodemon": "^2.0.3",
     "pdf-parse": "^1.1.1",
     "prettier": "2.0.2",
+    "requests": "^0.3.0",
     "supertest": "^4.0.2",
     "typescript": "^3.8.3"
   }
