--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "pug": "^2.0.4",
     "querystring": "^0.2.0",
     "ramda": "^0.27.0",
+    "request": "^2.88.2",
     "romannumerals": "^1.1.1",
     "string-hash": "^1.1.3",
     "superagent": "^5.2.2",
@@ -152,7 +153,6 @@
     "nodemon": "^2.0.3",
     "pdf-parse": "^1.1.1",
     "prettier": "2.0.2",
-    "requests": "^0.3.0",
     "supertest": "^4.0.2",
     "typescript": "^3.8.3"
   }
