DCS-434 move over to quay.io images

--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -4,7 +4,7 @@
 replicaCount: 4
 
 image:
-  repository: docker.io/mojdigitalstudio/licences
+  repository: quay.io/hmpps/licences
   tag: latest
   pullPolicy: IfNotPresent
   port: 3000
