--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   licences:
-    image: mojdigitalstudio/licences:latest
+    image: quay.io/hmpps/licences:latest
     networks:
       - hmpps
     container_name: licences
