--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,20 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
     "target": "es2018",
     "module": "commonjs",
     "moduleResolution": "node",
+    "outDir": "./dist",
+    "sourceMap": true,
     "suppressImplicitAnyIndexErrors": true,
     "skipLibCheck": true,
-    "noEmit": true,
+    "noEmit": false,
     "allowJs": true,
     "checkJs": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
-  "exclude": ["node_modules", "test/**/*.js", "assets/**/*.js", "licences-specs"],
-  "include": ["**/*.js"]
+  "exclude": ["node_modules", "assets/**/*.js", "test", "dist"],
+  "include": ["**/*.js", "**/*.ts"]
 }
