--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
   },
-  "exclude": ["node_modules", "assets/**/*.js", "test", "dist"],
+  "exclude": ["node_modules", "assets/**/*.js", "test", "dist", "licences-specs"],
   "include": ["**/*.js", "**/*.ts"]
 }
