--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -29,6 +29,7 @@ env:
   DELIUS_API_URL: "https://community-api-secure.pre-prod.delius.probation.hmpps.dsd.io"
   DELIUS_API_PREFIX: "/secure"
   PROBATION_TEAMS_API_URL: "https://probation-teams-preprod.prison.service.justice.gov.uk"
+  EXIT_LOCATION_URL: "https://digital-preprod.prison.service.justice.gov.uk/"
 
 whitelist:
   office: "217.33.148.210/32"
