update whitelist with new oakwood ips

--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -44,7 +44,8 @@ whitelist:
   sodexo-northumberland: "88.98.48.10/32"
   thameside-private-prison: "217.22.14.151/32"
   durham-tees-valley: "51.179.197.1/32"
-  oakwood: "194.176.200.113/32"
+  oakwood-1: "217.161.76.187/32"
+  oakwood-2: "217.161.76.195/32"
   dxc-mitcheldean: "195.92.38.16/28"
   ark-dom1-ttp1: "195.59.75.0/24"
   ark-dom1-farnborough: "194.33.192.0/24"
