DT-851: updated to pull oauth docker images from quay

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       - POSTGRES_DB=licences
 
   nomis-oauth2-server:
-    image: mojdigitalstudio/nomis-oauth2-server:latest
+    image: quay.io/hmpps/nomis-oauth2-server:latest
     networks:
       - hmpps
     container_name: nomis-oauth2-server
