--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
         "project": "./tsconfig.json"
       },
       "rules": {
+        "@typescript-eslint/no-use-before-define": 0,
         "@typescript-eslint/no-unused-vars": [
           1,
           {
