--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
       },
       "rules": {
         "@typescript-eslint/no-use-before-define": 0,
+        "class-methods-use-this": 0,
         "@typescript-eslint/no-unused-vars": [
           1,
           {
