--- a/package.json
+++ b/package.json
@@ -165,5 +165,9 @@
     "supertest": "^4.0.2",
     "ts-jest": "^25.3.1",
     "typescript": "^3.8.3"
+  },
+  "bin": {
+    "loadLicences": "./server/loadLicences.js",
+    "saveLicences": "./server/saveLicences.js"
   }
 }
