--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
   },
   "bin": {
     "loadLicences": "./server/loadLicences.js",
-    "saveLicences": "./server/saveLicences.js"
+    "saveLicences": "./server/saveLicences.js",
+    "collectStatistics": "./dist/server/collectStatistics.js"
   }
 }
