--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,6 @@ orbs:
   hmpps: ministryofjustice/hmpps@1.0.0
 
 executors:
-  builder:
-    docker:
-      - image: circleci/node:12-buster-browsers
-    working_directory: ~/app
   integration-tests:
     docker:
       - image: circleci/openjdk:11-jdk-node-browsers
@@ -19,7 +15,7 @@ executors:
 
 jobs:
   build:
-    executor: builder
+    executor: hmpps/node
     steps:
       - checkout
       - run:
@@ -55,7 +51,7 @@ jobs:
             - .cache/Cypress
 
   unit_test:
-    executor: builder
+    executor: hmpps/node
     steps:
       - checkout
       - restore_cache:
@@ -136,14 +132,14 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
       - hmpps/deploy_env:
           name: deploy_dev
           env: "dev"
           filters:
             branches:
               only:
-                - master
+                - main
           requires:
             - helm_lint
             - unit_test
@@ -178,6 +174,6 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
     jobs:
       - hmpps/npm_security_audit
