--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -10,7 +10,7 @@ image:
 
 ingress:
   enabled: true
-  enable_whitelist: true
+  enable_allow_list: true
   host: licences-preprod.prison.service.justice.gov.uk
   cert_secret: licences-cert
   path: /
@@ -30,7 +30,7 @@ env:
   PROBATION_TEAMS_API_URL: "https://probation-teams-preprod.prison.service.justice.gov.uk"
   EXIT_LOCATION_URL: "https://digital-preprod.prison.service.justice.gov.uk/"
 
-whitelist:
+allow_list:
   office: "217.33.148.210/32"
   quantum: "62.25.109.197/32"
   quantum_alt: "212.137.36.230/32"
