--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -17,8 +17,8 @@ ingress:
 
 env:
   DOMAIN:
-  NOMIS_API_URL: "https://gateway.t3.nomis-api.hmpps.dsd.io/elite2api/api"
-  NOMIS_AUTH_URL: "https://gateway.t3.nomis-api.hmpps.dsd.io/auth"
+  NOMIS_API_URL: "https://api-dev.prison.service.justice.gov.uk/api"
+  NOMIS_AUTH_URL: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
   GLOBAL_SEARCH_URL: "https://whereabouts-dev.prison.service.justice.gov.uk/global-search"
   AUTH_STRATEGY: "oauth"
   PUSH_TO_NOMIS: "yes"
