--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -16,8 +16,8 @@ ingress:
   path: /
 
 env:
-  NOMIS_API_URL: "https://gateway.preprod.nomis-api.service.hmpps.dsd.io/elite2api/api"
-  NOMIS_AUTH_URL: "https://gateway.preprod.nomis-api.service.hmpps.dsd.io/auth"
+  NOMIS_API_URL: "https://api-preprod.prison.service.justice.gov.uk/api"
+  NOMIS_AUTH_URL: "https://sign-in-preprod.hmpps.service.justice.gov.uk/auth"
   GLOBAL_SEARCH_URL: "https://whereabouts-preprod.prison.service.justice.gov.uk/global-search"
   AUTH_STRATEGY: "oauth"
   PUSH_TO_NOMIS: "yes"
