DCS-584 Upgrading dependencies

--- a/package.json
+++ b/package.json
@@ -88,12 +88,13 @@
     ]
   },
   "dependencies": {
+    "@hapi/joi-date": "^2.0.1",
     "@ministryofjustice/express-template-to-pdf": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
-    "adm-zip": "^0.4.14",
-    "agentkeepalive": "^4.1.2",
-    "applicationinsights": "^1.7.6",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
+    "adm-zip": "^0.4.16",
+    "agentkeepalive": "^4.1.3",
+    "applicationinsights": "^1.8.2",
     "applicationinsights-native-metrics": "0.0.5",
     "body-parser": "^1.19.0",
     "case": "^1.6.3",
@@ -106,27 +107,25 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-request-id": "^1.4.1",
-    "express-winston": "^4.0.3",
+    "express-winston": "^4.0.5",
     "govuk-elements-sass": "^3.1.3",
     "govuk_frontend_toolkit": "^9.0.0",
     "govuk_template_jinja": "^0.26.0",
-    "helmet": "^3.23.0",
-    "joi": "^14.3.1",
-    "joi-date-extensions": "^1.2.0",
-    "joi-postcode": "^3.0.0",
+    "helmet": "^3.23.3",
+    "joi": "^17.1.1",
     "jquery": "^1.12.4",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.21.1",
+    "knex": "^0.21.2",
     "knex-migrate": "^1.7.4",
-    "moment": "^2.26.0",
+    "moment": "^2.27.0",
     "moment-business-days": "^1.2.0",
     "nocache": "^2.1.0",
     "node-schedule": "^1.3.2",
-    "notifications-node-client": "^4.7.3",
+    "notifications-node-client": "^4.8.0",
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
     "path": "^0.12.7",
-    "pg": "^8.2.1",
+    "pg": "^8.3.0",
     "pg-format": "^1.0.4",
     "poll-endpoint-for": "0.0.7",
     "pug": "^3.0.0",
@@ -135,36 +134,36 @@
     "request": "^2.88.2",
     "romannumerals": "^1.1.1",
     "string-hash": "^1.1.3",
-    "superagent": "^5.2.2",
+    "superagent": "^5.3.1",
     "swagger-ui-express": "^4.1.4",
     "util": "^0.12.3",
-    "uuid": "^8.1.0",
-    "winston": "^3.2.1"
+    "uuid": "^8.2.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.0",
-    "@types/node": "^14.0.13",
+    "@types/jest": "^26.0.7",
+    "@types/node": "^14.0.26",
     "concurrently": "^5.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-airbnb-typescript": "^7.2.1",
-    "eslint-config-prettier": "^6.10.1",
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-airbnb-typescript": "^9.0.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
-    "jest": "^26.0.1",
+    "jest": "^26.1.0",
     "jest-html-reporter": "^3.1.3",
-    "jest-junit": "^10.0.0",
-    "lint-staged": "^10.2.10",
-    "nock": "^12.0.3",
+    "jest-junit": "^11.0.1",
+    "lint-staged": "^10.2.11",
+    "nock": "^13.0.2",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "pdf-parse": "^1.1.1",
     "prettier": "2.0.5",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.1.0",
-    "typescript": "^3.9.5"
+    "ts-jest": "^26.1.3",
+    "typescript": "^3.9.7"
   },
   "bin": {
     "loadLicences": "./server/loadLicences.js",
