DCS-589 Fixing healthcheck and moving to more standard way of representing api url

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -17,7 +17,7 @@ ingress:
 
 env:
   DOMAIN:
-  NOMIS_API_URL: "https://api-dev.prison.service.justice.gov.uk/api"
+  NOMIS_API_URL: "https://api-dev.prison.service.justice.gov.uk"
   NOMIS_AUTH_URL: "https://sign-in-dev.hmpps.service.justice.gov.uk/auth"
   GLOBAL_SEARCH_URL: "https://whereabouts-dev.prison.service.justice.gov.uk/global-search"
   AUTH_STRATEGY: "oauth"
