--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "npm run clean && npm run css-build && tsc && npm run copy-views",
     "start": "node dist/server.js",
     "start:dev": "npm run build && concurrently -k -p \"[{name}]\" -n \"Views,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-views\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "start-mocks": "node mock-server/start.js",
     "test": "jest",
     "test-ci": "jest --runInBand",
     "lint": "eslint .",
@@ -115,6 +116,7 @@
     "joi": "^17.1.1",
     "jquery": "^1.12.4",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "knex": "^0.21.2",
     "knex-migrate": "^1.7.4",
     "moment": "^2.27.0",
