--- a/package.json
+++ b/package.json
@@ -86,13 +86,18 @@
           "outputPath": "test-results/unit-test-reports.html"
         }
       ]
+    ],
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "json",
+      "node",
+      "ts"
     ]
   },
   "dependencies": {
     "@hapi/joi-date": "^2.0.1",
     "@ministryofjustice/express-template-to-pdf": "^2.1.0",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
     "adm-zip": "^0.4.16",
     "agentkeepalive": "^4.1.3",
     "applicationinsights": "^1.8.2",
@@ -145,6 +150,8 @@
   "devDependencies": {
     "@types/jest": "^26.0.7",
     "@types/node": "^14.0.26",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
     "concurrently": "^5.2.0",
     "eslint": "^7.5.0",
     "eslint-config-airbnb-base": "^14.2.0",
