DCS-615 Fix 'Back' link on the admin "Manage delius roles' page DCS-616 Hook up token verification service

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,7 @@ jobs:
       NOMIS_AUTH_URL: http://hmpps-auth:9090/auth
       DELIUS_API_URL: http://localhost:8080/communityapi
       PROBATION_TEAMS_API_URL: http://localhost:8080/probationteams
+      TOKENVERIFICATION_API_ENABLED: false
     steps:
       - checkout
       - attach_workspace:
