--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -29,6 +29,8 @@ env:
   DELIUS_API_PREFIX: "/secure"
   PROBATION_TEAMS_API_URL: "https://probation-teams.prison.service.justice.gov.uk"
   EXIT_LOCATION_URL: "https://digital.prison.service.justice.gov.uk/"
+  TOKENVERIFICATION_API_URL: https://token-verification-api.prison.service.justice.gov.uk
+  TOKENVERIFICATION_API_ENABLED: true
 
 allow_list:
   office: "217.33.148.210/32"
