--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,9 @@ executors:
 
 jobs:
   build:
-    executor: hmpps/node
+    executor:
+      name: hmpps/node
+      tag: 12-buster-browsers
     steps:
       - checkout
       - run:
@@ -56,7 +58,9 @@ jobs:
             - .cache/Cypress
 
   unit_test:
-    executor: hmpps/node
+    executor:
+      name: hmpps/node
+      tag: 12-buster-browsers
     steps:
       - checkout
       - restore_cache:
