--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,9 @@ executors:
 
 jobs:
   build:
-    executor: hmpps/node
+    executor:
+      name: hmpps/node
+      tag: 12.18.2-buster-browsers
     steps:
       - checkout
       - run:
@@ -56,7 +58,9 @@ jobs:
             - .cache/Cypress
 
   unit_test:
-    executor: hmpps/node
+    executor:
+      name: hmpps/node
+      tag: 12.18.2-buster-browsers
     steps:
       - checkout
       - restore_cache:
@@ -78,6 +82,7 @@ jobs:
       NOMIS_AUTH_URL: http://hmpps-auth:9090/auth
       DELIUS_API_URL: http://localhost:8080/communityapi
       PROBATION_TEAMS_API_URL: http://localhost:8080/probationteams
+      TOKENVERIFICATION_API_ENABLED: false
     steps:
       - checkout
       - attach_workspace:
