DCS-480 Postpone an approved licence. CA Caselist status is now 'Licence created' and Create Licence task is availiable

--- a/package.json
+++ b/package.json
@@ -176,7 +176,6 @@
   },
   "bin": {
     "loadLicences": "./server/loadLicences.js",
-    "saveLicences": "./server/saveLicences.js",
-    "collectStatistics": "./dist/server/collectStatistics.js"
+    "saveLicences": "./server/saveLicences.js"
   }
 }
