--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "case": "^1.6.3",
     "compression": "^1.7.4",
     "config": "^3.3.1",
+    "concat-stream": "^2.0.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^2.0.0-beta.3",
