--- a/package.json
+++ b/package.json
@@ -105,8 +105,8 @@
     "body-parser": "^1.19.0",
     "case": "^1.6.3",
     "compression": "^1.7.4",
-    "config": "^3.3.1",
     "concat-stream": "^2.0.0",
+    "config": "^3.3.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^2.0.0-beta.3",
@@ -124,7 +124,7 @@
     "jwt-decode": "^2.2.0",
     "knex": "^0.21.2",
     "knex-migrate": "^1.7.4",
-    "moment": "^2.27.0",
+    "moment": "2.29.0",
     "moment-business-days": "^1.2.0",
     "nocache": "^2.1.0",
     "node-schedule": "^1.3.2",
@@ -148,8 +148,8 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.7",
-    "@types/node": "^14.0.26",
+    "@types/jest": "^26.0.4",
+    "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "concurrently": "^5.2.0",
@@ -161,9 +161,9 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
-    "jest": "^26.1.0",
-    "jest-html-reporter": "^3.1.3",
-    "jest-junit": "^11.0.1",
+    "jest": "^26.4.2",
+    "jest-html-reporter": "^3.2.0",
+    "jest-junit": "^11.1.0",
     "lint-staged": "^10.2.11",
     "nock": "^13.0.2",
     "node-sass": "^4.14.1",
@@ -171,7 +171,7 @@
     "pdf-parse": "^1.1.1",
     "prettier": "2.0.5",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.1.3",
+    "ts-jest": "^26.4.0",
     "typescript": "^3.9.7"
   },
   "bin": {
