--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -31,6 +31,7 @@ env:
   EXIT_LOCATION_URL: "https://digital.prison.service.justice.gov.uk/"
   TOKENVERIFICATION_API_URL: https://token-verification-api.prison.service.justice.gov.uk
   TOKENVERIFICATION_API_ENABLED: true
+  FEEDBACK_SUPPORT_URL: "https://support.hmpps.service.justice.gov.uk/feedback-and-support"
 
 allow_list:
   office: "217.33.148.210/32"
