--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "case": "^1.6.3",
     "compression": "^1.7.4",
     "concat-stream": "^2.0.0",
-    "config": "^3.3.1",
+    "config": "3.3.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^2.0.0-beta.3",
@@ -118,11 +118,11 @@
     "govuk_frontend_toolkit": "^9.0.0",
     "govuk_template_jinja": "^0.26.0",
     "helmet": "^3.23.3",
-    "joi": "^17.1.1",
+    "joi": "17.3.0",
     "jquery": "^1.12.4",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
-    "knex": "^0.21.2",
+    "knex": "0.21.8",
     "knex-migrate": "^1.7.4",
     "moment": "2.29.0",
     "moment-business-days": "^1.2.0",
@@ -132,7 +132,7 @@
     "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
     "path": "^0.12.7",
-    "pg": "^8.3.0",
+    "pg": "8.4.2",
     "pg-format": "^1.0.4",
     "poll-endpoint-for": "0.0.7",
     "pug": "^3.0.0",
@@ -144,34 +144,34 @@
     "superagent": "^5.3.1",
     "swagger-ui-express": "^4.1.4",
     "util": "^0.12.3",
-    "uuid": "^8.2.0",
+    "uuid": "8.3.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.4",
-    "@types/node": "^14.11.2",
+    "@types/jest": "26.0.15",
+    "@types/node": "14.14.5",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
     "concurrently": "^5.2.0",
-    "eslint": "^7.5.0",
+    "eslint": "7.12.1",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "6.14.0",
     "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-import": "2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
-    "jest": "^26.4.2",
-    "jest-html-reporter": "^3.2.0",
+    "jest": "26.6.1",
+    "jest-html-reporter": "3.3.0",
     "jest-junit": "^11.1.0",
-    "lint-staged": "^10.2.11",
+    "lint-staged": "10.5.0",
     "nock": "^13.0.2",
     "node-sass": "^4.14.1",
-    "nodemon": "^2.0.4",
+    "nodemon": "2.0.6",
     "pdf-parse": "^1.1.1",
     "prettier": "2.0.5",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.4.0",
+    "ts-jest": "26.4.3",
     "typescript": "^3.9.7"
   },
   "bin": {
