--- a/helm_deploy/licences/templates/ingress.yaml
+++ b/helm_deploy/licences/templates/ingress.yaml
@@ -10,7 +10,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/custom-http-errors: "418"
-    {{ if .Values.ingress.enable_allow_list }}nginx.ingress.kubernetes.io/whitelist-source-range: {{ include "app.joinListWithComma" .Values.allow_list | quote }}{{ end }}
+    {{ if .Values.ingress.enable_allowlist }}nginx.ingress.kubernetes.io/whitelist-source-range: {{ include "app.joinListWithComma" .Values.allowlist | quote }}{{ end }}
 spec:
   tls:
   - hosts:
