--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -10,7 +10,7 @@ image:
 
 ingress:
   enabled: true
-  enable_allow_list: false
+  enable_allowlist: false
   host: licences-dev.prison.service.justice.gov.uk
   cert_secret: licences-cert
   path: /
