Updating circle ci orb

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  hmpps: ministryofjustice/hmpps@1.1.2
+  hmpps: ministryofjustice/hmpps@2.1.0
 
 executors:
   integration-tests:
@@ -150,6 +150,8 @@ workflows:
       - hmpps/deploy_env:
           name: deploy_dev
           env: "dev"
+          context:
+            - hmpps-common-vars
           filters:
             branches:
               only:
@@ -166,7 +168,9 @@ workflows:
       - hmpps/deploy_env:
           name: deploy_preprod
           env: "preprod"
-          context: licences-preprod
+          context:
+            - licences-preprod
+            - hmpps-common-vars
           requires:
             - request-preprod-approval
       - request-prod-approval:
@@ -177,7 +181,9 @@ workflows:
           name: deploy_prod
           env: "prod"
           slack_notification: true
-          context: licences-prod
+          context:
+            - licences-prod
+            - hmpps-common-vars
           requires:
             - request-prod-approval
 
